--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html>
 <head>
     <title>Treasure Miner</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        button { margin: 5px; padding: 10px; }
+        #container { text-align: center; margin-top: 50px; }
+    </style>
     <script>
         let gold = 0;
         let goldPerClick = 1;
         let goldPerSecond = 0;
+        let prestigeMultiplier = 1;
+
+        function updateGold() {
+            document.getElementById('gold').innerText = gold;
+        }
 
         function mine() {
-            gold += goldPerClick;
-            document.getElementById('gold').innerText = gold;
+            gold += goldPerClick * prestigeMultiplier;
+            updateGold();
         }
 
         function buyUpgrade(upgrade) {
@@ -18,24 +28,4 @@
                 goldPerClick += 1;
             } else if (upgrade === 'miner' && gold >= 100) {
                 gold -= 100;
-                goldPerSecond += 1;
-            }
-            document.getElementById('gold').innerText = gold;
-        }
-
-        function automateIncome() {
-            gold += goldPerSecond;
-            document.getElementById('gold').innerText = gold;
-        }
-
-        setInterval(automateIncome, 1000);
-    </script>
-</head>
-<body>
-    <h1>Treasure Miner</h1>
-    <p>Gold: <span id="gold">0</span></p>
-    <button onclick="mine()">Mine Gold</button>
-    <button onclick="buyUpgrade('pickaxe')">Buy Pickaxe (10 gold)</button>
-    <button onclick="buyUpgrade('miner')">Buy Miner (100 gold)</button>
-</body>
-</html>
+                goldPerSecond += ​⬤
