--- a/index.html
+++ b/index.html
@@ -28,4 +28,45 @@
                 goldPerClick += 1;
             } else if (upgrade === 'miner' && gold >= 100) {
                 gold -= 100;
-                goldPerSecond += ​⬤
+                goldPerSecond += 1;
+            } else if (upgrade === 'superPickaxe' && gold >= 500) {
+                gold -= 500;
+                goldPerClick += 5;
+            } else if (upgrade === 'advancedMiner' && gold >= 1000) {
+                gold -= 1000;
+                goldPerSecond += 5;
+            }
+            updateGold();
+        }
+
+        function automateIncome() {
+            gold += goldPerSecond * prestigeMultiplier;
+            updateGold();
+        }
+
+        function prestige() {
+            if (gold >= 10000) {
+                prestigeMultiplier += 1;
+                gold = 0;
+                goldPerClick = 1;
+                goldPerSecond = 0;
+                updateGold();
+            }
+        }
+
+        setInterval(automateIncome, 1000);
+    </script>
+</head>
+<body>
+    <div id="container">
+        <h1>Treasure Miner</h1>
+        <p>Gold: <span id="gold">0</span></p>
+        <button onclick="mine()">Mine Gold</button>
+        <button onclick="buyUpgrade('pickaxe')">Buy Pickaxe (10 gold)</button>
+        <button onclick="buyUpgrade('miner')">Buy Miner (100 gold)</button>
+        <button onclick="buyUpgrade('superPickaxe')">Buy Super Pickaxe (500 gold)</button>
+        <button onclick="buyUpgrade('advancedMiner')">Buy Advanced Miner (1000 gold)</button>
+        <button onclick="prestige()">Prestige (10,000 gold)</button>
+    </div>
+</body>
+</html>
